Added descriptions and cleaned up GUID/targets

--- a/Marin/Other/E3.1.html
+++ b/Marin/Other/E3.1.html
@@ -9,7 +9,7 @@
     <link href="css/widgets.css" rel="stylesheet">
 </head>
 <body>
-    <div id="c13c498f2c12482a8fbb0ea343d2e305"></div>
+    <div id="bc13c498f2c12482a8fbb0ea343d2e305"></div>
     <script src="js/d3.v3.min.js"></script>
     
     <script src="js/brixlib-compiled.js"></script>
@@ -28,7 +28,7 @@
 
     a.config =
         {
-			"description": "A Sample Activity containing a LabelCarousel",
+			"description": "Image carousel showing stages of sensory coding.",
             //"imgBaseUrl": "http://localhost:8088/images/",
             "imgBaseUrl": "",
             "containerConfig":
@@ -182,7 +182,7 @@
                                                 "value":
                                                     {
                                                         "type": "d3select",
-                                                        "selector": "#c13c498f2c12482a8fbb0ea343d2e305"
+                                                        "selector": "#bc13c498f2c12482a8fbb0ea343d2e305"
                                                     }
                                             }
                                         ]
