--- a/Marin/Other/E3.26.html
+++ b/Marin/Other/E3.26.html
@@ -9,7 +9,7 @@
     <link href="css/widgets.css" rel="stylesheet">
 </head>
 <body>
-    <div id="ac1fc58ce64a451dbb6a864e27cc4ac7"></div>
+    <div id="bac1fc58ce64a451dbb6a864e27cc4ac7"></div>
     <script src="js/d3.v3.min.js"></script>
     
     <script src="js/brixlib-compiled.js"></script>
@@ -28,7 +28,7 @@
 
     a.config =
         {
-			"description": "A Sample Activity containing a LabelCarousel",
+			"description": "Image carousel showing a reversible figure.",
             //"imgBaseUrl": "http://localhost:8088/images/",
             "imgBaseUrl": "",
             "containerConfig":
@@ -156,7 +156,7 @@
                                                 "value":
                                                     {
                                                         "type": "d3select",
-                                                        "selector": "#ac1fc58ce64a451dbb6a864e27cc4ac7"
+                                                        "selector": "#bac1fc58ce64a451dbb6a864e27cc4ac7"
                                                     }
                                             }
                                         ]
