--- a/Marin/Other/E3.27.html
+++ b/Marin/Other/E3.27.html
@@ -9,7 +9,7 @@
     <link href="css/widgets.css" rel="stylesheet">
 </head>
 <body>
-    <div id="brix3c0874d7e4d741488b2e5fc143c7f9ea"></div>
+    <div id="b3c0874d7e4d741488b2e5fc143c7f9ea"></div>
     <script src="js/d3.v3.min.js"></script>
     
     <script src="js/brixlib-compiled.js"></script>
@@ -28,7 +28,7 @@
 
     a.config =
         {
-			"description": "A Sample Activity containing a LabelCarousel",
+			"description": "Image carousel showing Gestalt Principles.",
             //"imgBaseUrl": "http://localhost:8088/images/",
             "imgBaseUrl": "",
             "containerConfig":
@@ -182,7 +182,7 @@
                                                 "value":
                                                     {
                                                         "type": "d3select",
-                                                        "selector": "#brix3c0874d7e4d741488b2e5fc143c7f9ea"
+                                                        "selector": "#b3c0874d7e4d741488b2e5fc143c7f9ea"
                                                     }
                                             }
                                         ]
