--- a/Marin/Other/E3.31.html
+++ b/Marin/Other/E3.31.html
@@ -28,7 +28,7 @@
 
     a.config =
         {
-			"description": "A Sample Activity containing a LabelCarousel",
+			"description": "Image carousel showing various monocular cues of perception.",
             //"imgBaseUrl": "http://localhost:8088/images/",
             "imgBaseUrl": "",
             "containerConfig":
