--- a/Marin/Other/E3.7.html
+++ b/Marin/Other/E3.7.html
@@ -9,7 +9,7 @@
     <link href="css/widgets.css" rel="stylesheet">
 </head>
 <body>
-    <div id="a8e5d57f829c34e4785a88658ec794b80"></div>
+    <div id="b8e5d57f829c34e4785a88658ec794b80"></div>
     <script src="js/d3.v3.min.js"></script>
     
     <script src="js/brixlib-compiled.js"></script>
@@ -28,7 +28,7 @@
 
     a.config =
 		{
-			"description": "A Sample Activity containing an ImageViewer w/ 6 Images",
+			"description": "Image carousel showing retina, photo receptors and close up of rods and cones.",
 			"imgBaseUrl": "",
 			"containerConfig":
 				[
@@ -162,7 +162,7 @@
 												"value":
 													{
 														"type": "d3select",
-														"selector": "#a8e5d57f829c34e4785a88658ec794b80"
+														"selector": "#b8e5d57f829c34e4785a88658ec794b80"
 													}
 											}
 										]
