--- a/Marin/Other/E3.12.html
+++ b/Marin/Other/E3.12.html
@@ -9,7 +9,7 @@
     <link href="css/widgets.css" rel="stylesheet">
 </head>
 <body>
-    <div id="e657869f38d44501b03bb93cd15faf6e"></div>
+    <div id="b6b09f40fc76d490aa5156f975233d4a2"></div>
     <script src="js/d3.v3.min.js"></script>
     
     <script src="js/brixlib-compiled.js"></script>
@@ -28,7 +28,7 @@
 
     a.config =
         {
-			"description": "A Sample Activity containing a LabelCarousel",
+			"description": "Image Carousel showing frequency and amplitude",
             //"imgBaseUrl": "http://localhost:8088/images/",
             "imgBaseUrl": "",
             "containerConfig":
@@ -156,7 +156,7 @@
                                                 "value":
                                                     {
                                                         "type": "d3select",
-                                                        "selector": "#e657869f38d44501b03bb93cd15faf6e"
+                                                        "selector": "#b6b09f40fc76d490aa5156f975233d4a2"
                                                     }
                                             }
                                         ]
