--- a/Marin/Other/E3.24.html
+++ b/Marin/Other/E3.24.html
@@ -9,7 +9,7 @@
     <link href="css/widgets.css" rel="stylesheet">
 </head>
 <body>
-    <div id="brix8bc00f6ff15d47648ab8bc4e578b3af5"></div>
+    <div id="b8bc00f6ff15d47648ab8bc4e578b3af5"></div>
     <script src="js/d3.v3.min.js"></script>
     
     <script src="js/brixlib-compiled.js"></script>
@@ -28,7 +28,7 @@
 
     a.config =
         {
-			"description": "A Sample Activity containing a LabelCarousel",
+			"description": "Image carousel highlighting perceptual constancies.",
             //"imgBaseUrl": "http://localhost:8088/images/",
             "imgBaseUrl": "",
             "containerConfig":
@@ -156,7 +156,7 @@
                                                 "value":
                                                     {
                                                         "type": "d3select",
-                                                        "selector": "#brix8bc00f6ff15d47648ab8bc4e578b3af5"
+                                                        "selector": "#b8bc00f6ff15d47648ab8bc4e578b3af5"
                                                     }
                                             }
                                         ]
