re-encode questions from cp1252 to utf-8

--- a/Manza/MC/Big_Question_11.1/Rev.11.1.2.html
+++ b/Manza/MC/Big_Question_11.1/Rev.11.1.2.html
@@ -82,27 +82,27 @@
                                                                                 "answer1":
                                                                                         {
                                                                                             "score": 1,
-                                                                                            "response": "Yes, sociologist Max Weber sees ethnicity as a subjective entity. This means that a person’s ethnic membership is based on their belief in shared descent."
+                                                                                            "response": "Yes, sociologist Max Weber sees ethnicity as a subjective entity. This means that a personâ€™s ethnic membership is based on their belief in shared descent."
                                                                                         },
                                                                                 "answer2":
                                                                                         {
                                                                                             "score": 0,
-                                                                                            "response": "Refer to Learning Objective 11.1.1: Compare and contrast contemporary sociologists’ and Max Weber’s definitions of race and ethnicity."
+                                                                                            "response": "Refer to Learning Objective 11.1.1: Compare and contrast contemporary sociologistsâ€™ and Max Weberâ€™s definitions of race and ethnicity."
                                                                                         },
                                                                                 "answer3":
                                                                                         {
                                                                                             "score": 0,
-                                                                                            "response": "Refer to Learning Objective 11.1.1: Compare and contrast contemporary sociologists’ and Max Weber’s definitions of race and ethnicity."
+                                                                                            "response": "Refer to Learning Objective 11.1.1: Compare and contrast contemporary sociologistsâ€™ and Max Weberâ€™s definitions of race and ethnicity."
                                                                                         },
                                                                                 "answer4":
                                                                                         {
                                                                                             "score": 0,
-                                                                                            "response": "Refer to Learning Objective 11.1.1: Compare and contrast contemporary sociologists’ and Max Weber’s definitions of race and ethnicity."
+                                                                                            "response": "Refer to Learning Objective 11.1.1: Compare and contrast contemporary sociologistsâ€™ and Max Weberâ€™s definitions of race and ethnicity."
                                                                                         },
                                                                                 "answer5":
                                                                                         {
                                                                                             "score": 0,
-                                                                                            "response": "Refer to Learning Objective 11.1.1: Compare and contrast contemporary sociologists’ and Max Weber’s definitions of race and ethnicity."
+                                                                                            "response": "Refer to Learning Objective 11.1.1: Compare and contrast contemporary sociologistsâ€™ and Max Weberâ€™s definitions of race and ethnicity."
                                                                                         },
                                                                             }
                                                                 }
