--- a/Manza/MC/Big_Question_11.1/Rev.11.1.4.html
+++ b/Manza/MC/Big_Question_11.1/Rev.11.1.4.html
@@ -82,27 +82,27 @@
                                                                                 "answer1":
                                                                                         {
                                                                                             "score": 1,
-                                                                                            "response": "Yes, the one-drop rule states that having only one grandparent of a non-white race would define a person’s racial identity. This was a custom in the United States in the early twentieth century."
+                                                                                            "response": "Yes, the one-drop rule states that having only one grandparent of a non-white race would define a personâ€™s racial identity. This was a custom in the United States in the early twentieth century."
                                                                                         },
                                                                                 "answer2":
                                                                                         {
                                                                                             "score": 0,
-                                                                                            "response": "Refer to Learning Objective 11.1.1: Compare and contrast contemporary sociologists’ and Max Weber’s definitions of race and ethnicity."
+                                                                                            "response": "Refer to Learning Objective 11.1.1: Compare and contrast contemporary sociologistsâ€™ and Max Weberâ€™s definitions of race and ethnicity."
                                                                                         },
                                                                                 "answer3":
                                                                                         {
                                                                                             "score": 0,
-                                                                                            "response": "Refer to Learning Objective 11.1.1: Compare and contrast contemporary sociologists’ and Max Weber’s definitions of race and ethnicity."
+                                                                                            "response": "Refer to Learning Objective 11.1.1: Compare and contrast contemporary sociologistsâ€™ and Max Weberâ€™s definitions of race and ethnicity."
                                                                                         },
                                                                                 "answer4":
                                                                                         {
                                                                                             "score": 0,
-                                                                                            "response": "Refer to Learning Objective 11.1.1: Compare and contrast contemporary sociologists’ and Max Weber’s definitions of race and ethnicity."
+                                                                                            "response": "Refer to Learning Objective 11.1.1: Compare and contrast contemporary sociologistsâ€™ and Max Weberâ€™s definitions of race and ethnicity."
                                                                                         },
                                                                                 "answer5":
                                                                                         {
                                                                                             "score": 0,
-                                                                                            "response": "Refer to Learning Objective 11.1.1: Compare and contrast contemporary sociologists’ and Max Weber’s definitions of race and ethnicity."
+                                                                                            "response": "Refer to Learning Objective 11.1.1: Compare and contrast contemporary sociologistsâ€™ and Max Weberâ€™s definitions of race and ethnicity."
                                                                                         },
                                                                             }
                                                                 }
