--- a/Manza/MC/Big_Question_11.2/Rev.11.2.2.html
+++ b/Manza/MC/Big_Question_11.2/Rev.11.2.2.html
@@ -82,7 +82,7 @@
                                                                                 "answer1":
                                                                                         {
                                                                                             "score": 1,
-                                                                                            "response": "Yes, contemporary Americans link racial differences with genes. This is different than how many other societies understand racial differences—as residing in the blood, mind, or soul. The conventions and classifications we come up with are reflections of the social, economic, and political worlds we live in."
+                                                                                            "response": "Yes, contemporary Americans link racial differences with genes. This is different than how many other societies understand racial differencesâ€”as residing in the blood, mind, or soul. The conventions and classifications we come up with are reflections of the social, economic, and political worlds we live in."
                                                                                         },
                                                                                 "answer2":
                                                                                         {
