--- a/Manza/MC/Big_Question_11.5/Rev.11.5.1.html
+++ b/Manza/MC/Big_Question_11.5/Rev.11.5.1.html
@@ -82,7 +82,7 @@
                                                                                 "answer1":
                                                                                         {
                                                                                             "score": 1,
-                                                                                            "response": "Yes, the descendants of later European arrivals like Germans, Italians, and Poles are now among the most numerous in the nation, and ìMexicanî ranks sixth on the list of the most common ancestries Americans report."
+                                                                                            "response": "Yes, the descendants of later European arrivals like Germans, Italians, and Poles are now among the most numerous in the nation, and ‚ÄúMexican‚Äù ranks sixth on the list of the most common ancestries Americans report."
                                                                                         },
                                                                                 "answer2":
                                                                                         {
